This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php



Version ???

--Fixed so that BELL and HELL arrow labels are in English.txt translation file
  instead of hard-coded.



Editor Fixes:

--Fixed soundBank to roll back nextSoundNumber value whenever last sound in
  bank is deleted, to avoid sound id inflation.

--Fixed SoundWidget to uncount live use of old sound before saving new sound
  when recording over a sound.  This further reduces sound id inflation.  Now,
  if you record a bunch of sounds, with multiple overwriting takes for each
  one, and then delete them all, the nextSoundNumber won't increase at all.

--Key legends now have dark backgrounds behind them so they are more legible
  when large objects underhang them.

--Gigantic speed up (over 10x) of Editor load time when running with
  LeakTracer.  Allocating a 400x90 scene to init the SceneEditor was too slow,
  given all the deep copying of SimpleVectors for each cell.  Scene Editor now
  detects LeakTracer and allocates a smaller scene.




Server Fixes:

--Clearing new emotes list immediately after composing new emotes message,
  instead of much later, so that emotes don't get added later, before clearing,
  and then missed.  Fixes bug where some GH players don't get their permanent
  emote assigned and sent properly.  Fixes #972

--Fixed a busy-wait 100% cpu server bug caused by ghosts tripping the old age
  timer and setting our poll timeout (via minMoveTime) to 0.

--Slim chance of GH players.

--Before, only a player's last SIDS-death mother would be remembered and
  avoided.  If the player did /DIE repeatedly, this last SIDS mother would be
  replaced, allowing them to revisit the same mother repeatedly over time,
  which was annoying.  Now we maintin a full list of every mother for which a
  given baby player has done /DIE, and we avoid those mothers as long as they