@@ -637,6 +637,10 @@ int getNumExtraAnim( int inID ) {
 
 
 AnimationRecord *getAnimation( int inID, AnimType inType ) {
+    if( inID == -1 ) {
+        return NULL;
+        }
+    
     if( inID < mapSize ) {
         if( inType < endAnimType && inType != ground2 ) {
             return idMap[inID][inType];
