@@ -3335,6 +3335,10 @@ void resaveAll() {
 
 
 ObjectRecord *getObject( int inID, char inNoDefault ) {
+    if( inID == -1 ) {
+        return NULL;
+        }
+    
     inID = extractObjectID( inID );
     
     if( inID < mapSize ) {
@@ -4372,13 +4376,17 @@ HoldingPos drawObject( ObjectRecord *inObject, int inDrawBehindSlots,
                        ClothingSet inClothing,
                        double inScale ) {
 
+    HoldingPos returnHoldingPos = { false, {0, 0}, 0 };
+    
+    if( inObject == NULL ) {
+        return returnHoldingPos;
+        }
+
     checkDrawPos( inObject->id, inPos );
     
     if( inObject->noFlip ) {
         inFlipH = false;
         }
-
-    HoldingPos returnHoldingPos = { false, {0, 0}, 0 };
     
     SimpleVector <int> frontArmIndices;
     getFrontArmIndices( inObject, inAge, &frontArmIndices );
@@ -4799,6 +4807,15 @@ HoldingPos drawObject( ObjectRecord *inObject, doublePair inPos, double inRot,
                 inHideAllLimbs,
                 inHeldNotInPlaceYet,
                 inClothing );
+    
+    if( inObject == NULL ) {
+        return drawObject( inObject, 1, inPos, inRot, inWorn, inFlipH, inAge, 
+                           inHideClosestArm,
+                           inHideAllLimbs,
+                           inHeldNotInPlaceYet,
+                           inClothing );
+        }
+    
 
     char allBehind = true;
     for( int i=0; i< inObject->numSprites; i++ ) {
@@ -5524,6 +5541,13 @@ double getClosestObjectPart( ObjectRecord *inObject,
     *outClothing = -1;
     *outSlot = -1;
 
+    double smallestDist = 9999999;
+
+    if( inObject == NULL ) {
+        return smallestDist;
+        }
+    
+
     doublePair headPos = {0,0};
 
     int headIndex = getHeadIndex( inObject, inAge );
@@ -5842,7 +5866,6 @@ double getClosestObjectPart( ObjectRecord *inObject,
         }
     
     
-    double smallestDist = 9999999;
 
     char closestBehindSlots = false;
     
